# LanDrop

./: .gitlab-ci.yml  CMakeLists.txt  README.md  doxyfile
cicd/: Dockerfile  build.sh
landrop/: CMakeLists.txt  main.cpp  resources.qrc
landrop-cli/: .gitignore  CMakeLists.txt  receiver.cpp  sender.cpp
landrop-cli/receiver-deprec/: CMakeLists.txt  main.cpp  networkmanager.cpp  networkmanager.h  transferhandler.cpp  transferhandler.h
landrop-plus/: CMakeLists.txt  build.bat  main.cpp  resources.qrc
landrop-plus/config/: config.cpp  config.h
landrop-plus/core/: transferstatus.h
landrop-plus/network/: receiver.cpp  receiver.h  sender.cpp  sender.h
landrop-plus/services/: broadcastdiscoveryservice.cpp  broadcastdiscoveryservice.h  filetransfermanager.cpp  filetransfermanager.h  networkmanager.cpp  networkmanager.h  sharedfilemanager.cpp  sharedfilemanager.h
landrop-plus/ui/: aboutdialog.cpp  aboutdialog.h  batchrequestdialog.cpp  batchrequestdialog.h  configdialog.cpp  configdialog.h  mainwindow.cpp  mainwindow.h  sendfilewidget.cpp  sendfilewidget.h  sharedfileswidget.cpp  sharedfileswidget.h  transferhistorywidget.cpp  transferhistorywidget.h  transferitemwidget.cpp  transferitemwidget.h  userlistwidget.cpp  userlistwidget.h
landrop-test/: CMakeLists.txt  test_discoveryservice.cpp  test_filetransfermanager.cpp  test_main.cpp  test_networkmanager.cpp  test_receiver.cpp  test_sender.cpp  test_sharedfilemanager.cpp
landrop/config/: config.cpp  config.h
landrop/network/: receiver.cpp  receiver.h  sender.cpp  sender.h
landrop/ui/: aboutdialog.cpp  aboutdialog.h  batchrequestdialog.cpp  batchrequestdialog.h  configdialog.cpp  configdialog.h  mainwindow.cpp  mainwindow.h  sendfilewidget.cpp  sendfilewidget.h  sharedfileswidget.cpp  sharedfileswidget.h  transferhistorywidget.cpp  transferhistorywidget.h  transferitemwidget.cpp  transferitemwidget.h  userlistwidget.cpp  userlistwidget.h
